k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels:
    app: it-tools
spec:
  type: ClusterIP
  selector:
    app: it-tools
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
