k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  labels:
    app: it-tools
spec:
  ingressClassName: nginx
  rules:
    # Replace with your public DNS name.
    - host: it-tools.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80
